include_directories(../../RakNet-bin/include ../../boost-bin/include .)
link_directories(/root/mmomm/RakNet-bin/lib)
link_libraries(RakNet pthread)
SET(CMAKE_CXX_FLAGS "-D NDEBUG -O2 -m64")
add_executable(mmomm initializePacketManager.cpp networkServer.cpp serverChat.cpp serverCollisionPackets.cpp serverMain.cpp serverNativePackets.cpp serverWorldInstance.cpp worldInstance.cpp serverWorldMap.cpp networkPacket.cpp networkCommon.cpp frameTimer.cpp collision.cpp playerActor.cpp actor.cpp user.cpp serial.cpp tileTypes.cpp ieeehalfprecision.c)
